add version of JBT/JBDS to cascade pages so it's more clear which release we're dealing with
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30328 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/builds/cascade/index.html
+++ b/download.jboss.org/jbosstools/builds/cascade/index.html
@@ -26,6 +26,10 @@
 	</tr>
 	<tr>
 		<td class="bodyText">&#160;&#160;</td>
+		<td class="bodyText"><h2 class="title">JBoss Tools 3.2.x <b style="color:black">/</b> <b style="color:red">JBoss Developer Studio 4.x</b></h2></td>
+	</tr>
+	<tr>
+		<td class="bodyText">&#160;&#160;</td>
 		<td class="bodyText">
 		<p class="bodyText"><i>Note: <b style="color: red">red
 		links</b> require VPN access.</i>
