--- a/download.jboss.org/jbosstools/updates/index.html
+++ b/download.jboss.org/jbosstools/updates/index.html
@@ -66,12 +66,12 @@ http://download.jboss.org/jbosstools/updates/
 <li><a class=link href=requirements>All JBoss Tools dependencies in collection of update site</a> (for installing or developing)</li>
 <br/>
 <b>JBT Target Platforms</b><br/>
-<li><a class=link href=http://download.jboss.org/jbosstools/updates/target-platform_3.3.indigo>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.7) [experimental]</li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/target-platform_3.3.indigo>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.7)</li>
 <li><a class=link href=http://download.jboss.org/jbosstools/updates/target-platform>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
 <br/>
 <b>JBDS Target Platforms</b><br/>
 <li><a style="color: red" class=link href=http://www.qa.jboss.com/binaries/RHDS/updates/jbds-target-platform_3.3.indigo>All JBoss Developer Studio 5.0 dependencies in one update site</a> (for installing or developing with Eclipse 3.7)</li>
-<li><a style="color: red" class=link href=http://www.qa.jboss.com/binaries/RHDS/updates/jbds-target-platform>All JBoss Developer Studio 4.0 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
+<li><a style="color: red" class=link href=http://www.qa.jboss.com/binaries/RHDS/updates/jbds-target-platform>All JBoss Developer Studio 4.x dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
 <br/>
 <p class="bodyText"><i>Note: <b style="color: red">red
 		links</b> require VPN access.</i>
