--- a/download.jboss.org/jbosstools/updates/requirements/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/index.html
@@ -52,9 +52,13 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=ecf>ecf</a></li>
 <li><a class=link href=eclipse>eclipse</a></li>
 <li><a class=link href=emf>emf</a></li>
+<li><a class=link href=findbugs>findbugs</a></li>
 <li><a class=link href=gwt/201102111811>gwt/201102111811</a></li>
-<li><a class=link href=m2eclipse>m2eclipse</a></li>
+<li><a class=link href=jslint>jslint</a></li>
+<li><a class=link href=mylyn>mylyn</a> (including connectors for: Eclipse/PDE/Java, JIRA, Bugzilla, CVS, SVN, Git)</li>
+<li><a class=link href=m2eclipse>m2eclipse/0.13</a></li>
 <li><a class=link href=orbit/S20110124210048>orbit/S20110124210048</a></li>
+<li><a class=link href=pmd>pmd</a></li>
 <li><a class=link href=subclipse>subclipse</a></li>
 <li><a class=link href=subversive>subversive</a></li>
 <li><a class=link href=swtbot/2.0.3>swtbot/2.0.3</a></li>
@@ -67,10 +71,14 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=birt/2.6.2>birt/2.6.2</a></li>
 <li><a class=link href=ecf>ecf/3.4</a></li>
 <li><a class=link href=eclipse>eclipse/3.6</a></li>
+<li><a class=link href=egit>egit</a></li>
 <li><a class=link href=emf>emf/2.6</a></li>
+<li><a class=link href=findbugs>findbugs</a></li>
 <li><a class=link href=gwt/201012211742>gwt/201012211742</a></li>
-<li><a class=link href=orbit/R20100519200754>orbit/R20100519200754</a></li>
+<li><a class=link href=mylyn>mylyn</a> (including connectors for: Eclipse/PDE/Java, JIRA, Bugzilla, CVS, SVN, Git)</li>
 <li><a class=link href=m2eclipse/0.12>m2eclipse/0.12</a></li>
+<li><a class=link href=orbit/R20100519200754>orbit/R20100519200754</a></li>
+<li><a class=link href=pmd>pmd</a></li>
 <li><a class=link href=thirdparty>thirdparty</a> (deprecated)</li>
 <li><a class=link href=subclipse/1.6>subclipse/1.6</a></li>
 <li><a class=link href=subversive/0.7.9_2.2.2>subversive/0.7.9_2.2.2</a></li>
