--- a/download.jboss.org/jbosstools/requirements/helios/index.html
+++ b/download.jboss.org/jbosstools/requirements/helios/index.html
@@ -29,66 +29,35 @@
 
 			<tr class="dark-row" style="height: 30px">
 				<td class="bodyText">
-				<!-- <p class="bodyText"></p> -->
+				<p class="bodyText">
+This folder is deprecated; JBoss Tools and Dev Studio are now built againt at target platform, not a collection of runtime and SDK zips + update sites.
+<ul>
+<li>To view the cascade of build jobs and artifacts, from<br/>&nbsp;&nbsp;upstream <b>target platforms</b> to<br/>&nbsp;&nbsp;&nbsp;&nbsp;midstream <b>component update sites</b> to<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;downstream <b>aggregate update sites</b> and <br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;finally the <b>JBDS product build</b>, see:
+<ul>
+<li><a href="http://download.jboss.org/jbosstools/builds/cascade/trunk.html">Build Job Cascade + Results (Trunk)</a></li>
+<li><a href="http://download.jboss.org/jbosstools/builds/cascade/">Build Job Cascade + Results (3.2.x)</a></li>
+</ul>
+</li>
+<br/>
+<li>To view the JBoss Tools Target Platforms, see:
+<ul>
+<li><a href="http://download.jboss.org/jbosstools/updates/target-platform_trunk/latest/">JBoss Tools Target Platform (Trunk)</a></li>
+<li><a href="http://download.jboss.org/jbosstools/updates/target-platform/latest/">JBoss Tools Target Platform (3.2.x)</a></li>
+</ul>
+</li>
+<br/>
+<li>To view the JBoss Tools Requirements Composite Mirrors, see:
+<ul>
+<li><a href="http://download.jboss.org/jbosstools/updates/indigo/">JBoss Tools Requirements - Composite Mirror - Indigo</a></li>
+<li><a href="http://download.jboss.org/jbosstools/updates/helios/">JBoss Tools Requirements - Composite Mirror - Helios</a></li>
+</ul>
+</li>
+</ul>
+				</p>
 
-<!-- to convert raw fish listing to links do this in vi
-
-:%s#^sftp://tools@filemgmt.jboss.org/downloads_htdocs/tools/requirements/helios/\(.\+\)$#<li><a class=link href=\1>\1<\/a></li>#g
-or
-:%s#^file:///home/nboldt/1/jbosstools-trunk/download.jboss.org/jbosstools/requirements/helios/\(.\+\)$#<li><a class=link href=\1>\1<\/a></li>#g
-
-Then sftp file into 
-
-tools@filemgmt.jboss.org/downloads_htdocs/tools/requirements/helios/
-
-which becomes 
-
-http://download.jboss.org/jbosstools/requirements/helios/
-
--->
-				<br/>
-				<ul>
-
-<li><a class=link href=GEF-runtime-3.6.1.zip>GEF-runtime-3.6.1.zip</a></li>
-<li><a class=link href=GEF-zest-3.6.1.zip>GEF-zest-3.6.1.zip</a></li>
-<li><a class=link href=RSE-runtime-M20100909-1340.zip>RSE-runtime-M20100909-1340.zip</a></li>
-<li><a class=link href=Subvsve079.I201005121900_SVNconn222.I201005121900_SVNKit133.6648_JNA323_ECF310.v201005082345-Update.zip>Subvsve079.I201005121900_SVNconn222.I201005121900_SVNKit133.6648_JNA323_ECF310.v201005082345-Update.zip</a></li>
-<li><a class=link href=b3.aggregator-repo-0.1.0.r01053_e36.zip>b3.aggregator-repo-0.1.0.r01053_e36.zip</a></li>
-<li><a class=link href=birt-report-framework-2_6_1.zip>birt-report-framework-2_6_1.zip</a></li>
-<li><a class=link href=birt-wtp-integration-sdk-2_6_1.zip>birt-wtp-integration-sdk-2_6_1.zip</a></li>
-<li><a class=link href=buckminster-repo-1.3.1.r11579_e36.zip>buckminster-repo-1.3.1.r11579_e36.zip</a></li>
-<li><a class=link href=dtp_1.8.1.zip>dtp_1.8.1.zip</a></li>
-<li><a class=link href=eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz>eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz</a></li>
-<li><a class=link href=eclipse-SDK-3.6.1-linux-gtk.tar.gz>eclipse-SDK-3.6.1-linux-gtk.tar.gz</a></li>
-<li><a class=link href=eclipse-SDK-3.6.1-macosx-cocoa-x86_64.tar.gz>eclipse-SDK-3.6.1-macosx-cocoa-x86_64.tar.gz</a></li>
-<li><a class=link href=eclipse-SDK-3.6.1-macosx-cocoa.tar.gz>eclipse-SDK-3.6.1-macosx-cocoa.tar.gz</a></li>
-<li><a class=link href=eclipse-SDK-3.6.1-win32.zip>eclipse-SDK-3.6.1-win32.zip</a></li>
-<li><a class=link href=eclipse-test-framework-3.6.1.zip>eclipse-test-framework-3.6.1.zip</a></li>
-<li><a class=link href=emf-runtime-2.6.1.zip>emf-runtime-2.6.1.zip</a></li>
-<li><a class=link href=m2eclipse-0.10.2.20100623-1649_mylyn.zip>m2eclipse-0.10.2.20100623-1649_mylyn.zip</a></li>
-<li><a class=link href=org.eclipse.equinox.transforms.hook_1.0.200.v20100503.jar>org.eclipse.equinox.transforms.hook_1.0.200.v20100503.jar</a></li>
-<li><a class=link href=org.eclipse.equinox.transforms.xslt_1.0.200.v20100503.jar>org.eclipse.equinox.transforms.xslt_1.0.200.v20100503.jar</a></li>
-<li><a class=link href=org.eclipse.releng.basebuilder_R36_RC4.zip>org.eclipse.releng.basebuilder_R36_RC4.zip</a></li>
-<li><a class=link href=org.eclipse.swtbot.eclipse-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip>swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=spring-ide-Update-2.5.1.201011101000-RELEASE.zip>spring-ide-Update-2.5.1.201011101000-RELEASE.zip</a></li>
-<li><a class=link href=spring-ide-2.5.1.201011101000-RELEASE.zip>spring-ide-2.5.1.201011101000-RELEASE.zip</a></li>
-<li><a class=link href=testng-eclipse-5.8.0.1.zip>testng-eclipse-5.8.0.1.zip</a></li>
-<li><a class=link href=testng-eclipse-5.14.6.20110119.zip>testng-eclipse-5.14.6.20110119.zip</a></li>
-<li><a class=link href=testng-eclipse-Update-5.14.6.20110119_1050.zip>testng-eclipse-Update-5.14.6.20110119_1050.zip</a></li>
-<li><a class=link href=tptp.runtime-TPTP-4.7.1.zip>tptp.runtime-TPTP-4.7.1.zip</a></li>
-<li><a class=link href=mdt-uml2-runtime-3.1.1.zip>mdt-uml2-runtime-3.1.1.zip</a></li>
-<li><a class=link href=wtp-R-3.2.2-20100915173744.zip>wtp-R-3.2.2-20100915173744.zip</a></li>
-<li><a class=link href=xsd-runtime-2.6.1.zip>xsd-runtime-2.6.1.zip</a></li>
-<p/>
-<li><a class=link href=README.txt>README.txt</a></li>
-<li><a class=link href=m2eclipse/build.xml>m2eclipse/build.xml</a></li>
-<li><a class=link href=svn/build.xml>svn/build.xml</a></li>
-<li><a class=link href=xulrunner/README.txt>xulrunner/README.txt</a></li>
-				</ul>
-				<br/>
+<p class="bodyText">
+<i><a style="color:gray" href="OLD/">Deprecated content is here.</a></i>
+</p>
 				</td>
 			</tr>
 
