update copy on helios, indigo, requirements, and . pages
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30842 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/indigo/index.html
+++ b/download.jboss.org/jbosstools/updates/indigo/index.html
@@ -7,7 +7,7 @@
 </head>
 <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 <table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
-	cellspacing="0" cellpadding="0">
+	cellspacing="0" cellpadding="0" width="800">
 	<tr>
 		<td colspan="2"><img
 			src="https://www.jboss.org/dms/tools/images/tools-banner.png" /></td>
@@ -20,13 +20,14 @@
 		<td>
 		<h2 class="title">JBoss Tools Requirements - Composite Mirror - Indigo</h2>
 		<table width="100%">
-
-			<!-- <tr class="light-row" style="height: 30px">
+			<tr class="light-row" style="height: 30px">
 				<td class="bodyText">
-				<p class="bodyText"></p>
+				<p class="bodyText">
+This composite site includes all the third party projects' upstream dependencies (eg., Eclipse, WTP, Orbit) for Eclipse 3.7 / Web Tools 3.3 / Indigo.
+Point Eclipse at this URL to browse or install features. You can also explore this site's contents via its <a class=link href=compositeArtifacts.xml>compositeArtifacts.xml</a> file, or <a href=../requirements/>here</a>.
+				</p>
 				</td>
-			</tr> -->
-
+			</tr>
 			<tr class="dark-row" style="height: 30px">
 				<td class="bodyText">
 				<!-- <p class="bodyText"></p> -->
