--- a/download.jboss.org/jbosstools/updates/index.html
+++ b/download.jboss.org/jbosstools/updates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 <table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
-	cellspacing="0" cellpadding="0">
+	cellspacing="0" cellpadding="0" width="800">
 	<tr>
 		<td colspan="2"><img
 			src="https://www.jboss.org/dms/tools/images/tools-banner.png" /></td>
@@ -26,7 +26,6 @@
 				<p class="bodyText"></p>
 				</td>
 			</tr> -->
-
 			<tr class="dark-row" style="height: 30px">
 				<td class="bodyText">
 				<!-- <p class="bodyText"></p> -->
