add README and update index page to link to FindBugs sources per JBDS-1624
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30856 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/findbugs/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/findbugs/index.html
@@ -7,7 +7,7 @@
 </head>
 <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 <table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
-	cellspacing="0" cellpadding="0">
+	cellspacing="0" cellpadding="0" width="800">
 	<tr>
 		<td colspan="2"><img
 			src="https://www.jboss.org/dms/tools/images/tools-banner.png" /></td>
@@ -21,11 +21,19 @@
 		<h2 class="title">JBoss Tools Build Requirements - findbugs Updates</h2>
 		<table width="100%">
 
-			<!-- <tr class="light-row" style="height: 30px">
+			<tr class="light-row" style="height: 30px">
 				<td class="bodyText">
-				<p class="bodyText"></p>
+				<p class="bodyText">
+FindBugs is available under the Lesser Gnu Public License (LGPL).<br/>
+Sources can be found here at sourceforge.net:
+
+<ul>
+<li><a class="link" href="http://prdownloads.sourceforge.net/findbugs/eclipsePlugin-1.3.9.20090821-source.zip?download">FindBugs Eclipse Plugin 1.3.9.20090821 Source Zip</a></li>
+<li><a class="link" href="http://findbugs.sourceforge.net/downloads.html">FindBugs Downloads</a></li>
+</ul>
+				</p>
 				</td>
-			</tr> -->
+			</tr>
 
 			<tr class="dark-row" style="height: 30px">
 				<td class="bodyText">
@@ -44,7 +52,7 @@ which becomes
 http://download.jboss.org/jbosstools/updates/requirements/
 
 -->
-				<br/>
+<p class="bodyText">FindBugs Update Site (local JBoss.org mirror)</p>
 				<ul>
 <li><a class=link href=1.3.9>1.3.9</a> </li>
 				</ul>
