add findbugs back into indigo & helios sites
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30864 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/index.html
@@ -64,7 +64,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=ecf>ecf</a></li>
 <li><a class=link href=eclipse>eclipse</a></li>
 <li><a class=link href=emf>emf</a></li>
-<!-- <li><a class=link href=findbugs>findbugs</a></li> -->
+<li><a class=link href=findbugs>findbugs</a></li>
 <!-- <li><a class=link href=gwt/201102111811>gwt/201102111811</a></li> --> 
 <li><a class=link href=jslint>jslint</a></li>
 <li><a class=link href=mylyn>mylyn</a> (including connectors for: Eclipse/PDE/Java, JIRA, Bugzilla, CVS, SVN, Git)</li>
@@ -92,7 +92,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=eclipse>eclipse/3.6</a></li>
 <li><a class=link href=egit>egit</a></li>
 <li><a class=link href=emf>emf/2.6</a></li>
-<!-- <li><a class=link href=findbugs>findbugs</a></li> -->
+<li><a class=link href=findbugs>findbugs</a></li>
 <li><a class=link href=gwt/201012211742>gwt/201012211742</a></li>
 <li><a class=link href=mylyn>mylyn</a> (including connectors for: Eclipse/PDE/Java, JIRA, Bugzilla, CVS, SVN, Git)</li>
 <li><a class=link href=m2eclipse/0.12>m2eclipse/0.12</a></li>
